--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 									<div class="hstack gap-4 px-4 py-2 font-weight-semi-bold d-none d-lg-flex">
 										<div class="d-none d-lg-inline-block ps-1"><a class="text-color-default text-color-hover-primary text-2" href="#">800 123 4567</a></div>
 										<div class="vr d-lg-inline-block opacity-2 d-none d-xl-inline-block"></div>
-										<div class="d-none d-xl-inline-block"><a class="text-color-default text-color-hover-primary text-2" href="#">porto@domain.com</a></div>
+										<div class="d-none d-xl-inline-block"><a class="text-color-default text-color-hover-primary text-2" href="#">bellepestcontrol@gmail.com</a></div>
 										<div class="vr opacity-2 d-none d-xl-inline-block"></div>
-										<div class="d-none d-xl-inline-block"><span class="text-color-default text-color-hover-primary text-2">Mon — Sat: 9AM — 6PM</span></div>
+										<div class="d-none d-xl-inline-block"><span class="text-color-default text-color-hover-primary text-2">Mon — Sat: 7AM — 9PM</span></div>
 										<div class="ms-auto d-none d-lg-inline-block">
 											<ul class="nav nav-pills">
 												<li class="nav-item dropdown">
