--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
 									<ul class="list list-unstyled columns-lg-2">
 										<li><a href="#" class="text-color-grey text-color-hover-primary">Home</a></li>
 										<li><a href="#" class="text-color-grey text-color-hover-primary">About Us</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Services</a></li>
+										<li><a href="services.html" class="text-color-grey text-color-hover-primary">Services</a></li>
 										<li><a href="#" class="text-color-grey text-color-hover-primary">News</a></li>
 										<li><a href="#" class="text-color-grey text-color-hover-primary">Pages</a></li>
 										<li><a href="#" class="text-color-grey text-color-hover-primary">Contact Us</a></li>
