--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<div class="header-row">
 									<div class="header-logo p-relative top-1 m-0" width="320" height="150">
 										<a href="index.html">
-											<img alt="Belle Pest Control" width="220" height="100" src="image003.png">
+											<img alt="Belle Pest Control" width="320" height="150" src="image003.png">
 										</a>
 									</div>
 								</div>
@@ -270,15 +270,15 @@
 
 							<!-- Carousel Slide 1 -->
 							<div class="owl-item position-relative overflow-hidden">
-								<div class="background-image-wrapper position-absolute top-0 left-0 right-0 bottom-0" data-appear-animation="kenBurnsToLeft" data-appear-animation-duration="30s" data-plugin-options="{'minWindowWidth': 0}" data-carousel-onchange-show style="background-image: url(img/demos/transportation-logistic/slides/slide-1.jpg); background-size: cover; background-position: center;"></div>
+								<div class="background-image-wrapper position-absolute top-0 left-0 right-0 bottom-0" data-appear-animation="kenBurnsToLeft" data-appear-animation-duration="30s" data-plugin-options="{'minWindowWidth': 0}" data-carousel-onchange-show style="background-image: url(img/bellepics/3CED875E-F6D4-46D1-BF4B-A8ACD4083701_1_102_o.jpeg); background-size: cover; background-position: center;"></div>
 								<div class="container-fluid h-100 px-lg-5 mx-lg-5 pb-5">
 									<div class="row h-100 p-relative z-index-1 gx-5 pb-5">
 										<div class="col">
 											<div class="p-absolute top-50pct appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="100" data-plugin-options="{'minWindowWidth': 0}">
-												<h3 class="text-color-light rotate-r-90 font-weight-bold ls-0 p-relative left-0 custom-font-size-1 pe-5 ws-nowrap">We Delivery</h3>
+												<h3 class="text-color-light rotate-r-90 font-weight-bold ls-0 p-relative left-0 custom-font-size-1 pe-5 ws-nowrap">Pest Control</h3>
 											</div>
 											<div class="p-absolute top-50pct appear-animation" data-appear-animation="fadeInRightShorterPlus" data-appear-animation-delay="300" data-plugin-options="{'minWindowWidth': 0}">
-												<h3 class="custom-stroke-text-effect-1 color-transparent rotate-r-90 font-weight-bold ls-0 p-relative custom-text-pos-1 custom-font-size-1 pe-5 ws-nowrap">We Delivery</h3>
+												<h3 class="custom-stroke-text-effect-1 color-transparent rotate-r-90 font-weight-bold ls-0 p-relative custom-text-pos-1 custom-font-size-1 pe-5 ws-nowrap">Pest Control</h3>
 											</div>
 										</div>
 									</div>
@@ -287,12 +287,12 @@
 
 							<!-- Carousel Slide 2 -->
 							<div class="owl-item position-relative overflow-hidden">
-								<div class="background-image-wrapper position-absolute top-0 left-0 right-0 bottom-0" data-appear-animation="kenBurnsToRight" data-appear-animation-duration="30s" data-plugin-options="{'minWindowWidth': 0}" data-carousel-onchange-show style="background-image: url(img/demos/transportation-logistic/slides/slide-2.jpg); background-size: cover; background-position: center;"></div>
+								<div class="background-image-wrapper position-absolute top-0 left-0 right-0 bottom-0" data-appear-animation="kenBurnsToRight" data-appear-animation-duration="30s" data-plugin-options="{'minWindowWidth': 0}" data-carousel-onchange-show style="background-image: url(/Users/laptop01/Projects/Websites/bellepestcontrol/bellepestcontrol/img/bellepics/DF81E04E-B190-4FFB-82A3-34BDB5C9611E_1_102_o.jpeg); background-size: cover; background-position: center;"></div>
 								<div class="container-fluid h-100 px-lg-5 mx-lg-5 pb-5 text-end">
 									<div class="row h-100 p-relative z-index-1 gx-5 pb-5">
 										<div class="col">
-											<h3 class="text-color-light rotate-r-90 font-weight-bold ls-0 p-absolute top-50pct right-0 custom-font-size-1 pe-5 ws-nowrap">We Delivery</h3>
-											<h3 class="custom-stroke-text-effect-1 color-transparent rotate-r-90 font-weight-bold ls-0 p-absolute top-50pct custom-text-pos-2 custom-font-size-1 pe-5 ws-nowrap">We Delivery</h3>
+											<h3 class="text-color-light rotate-r-90 font-weight-bold ls-0 p-absolute top-50pct right-0 custom-font-size-1 pe-5 ws-nowrap">Pest Control</h3>
+											<h3 class="custom-stroke-text-effect-1 color-transparent rotate-r-90 font-weight-bold ls-0 p-absolute top-50pct custom-text-pos-2 custom-font-size-1 pe-5 ws-nowrap">Pest Control</h3>
 										</div>
 									</div>
 								</div>
