--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<div class="header-column">
 								<div class="border-bottom-light w-100">
 									<div class="hstack gap-4 px-4 py-2 font-weight-semi-bold d-none d-lg-flex">
-										<div class="d-none d-lg-inline-block ps-1"><a class="text-color-default text-color-hover-primary text-2" href="#">800 123 4567</a></div>
+										<div class="d-none d-lg-inline-block ps-1"><a class="text-color-default text-color-hover-primary text-2" href="#">(305) 721 9863</a></div>
 										<div class="vr d-lg-inline-block opacity-2 d-none d-xl-inline-block"></div>
 										<div class="d-none d-xl-inline-block"><a class="text-color-default text-color-hover-primary text-2" href="#">bellepestcontrol@gmail.com</a></div>
 										<div class="vr opacity-2 d-none d-xl-inline-block"></div>
@@ -125,115 +125,10 @@
 																	About Us
 																</a>
 															</li>
-															<li class="dropdown dropdown-mega">
-																<a class="dropdown-item dropdown-toggle" href="elements.html">
-
-																	Elements
-
-																</a>
-																<ul class="dropdown-menu border-top border-top-light mt-0">
-
-																	<li>
-																		<div class="dropdown-mega-content container px-2">
-																			<div class="row px-1">
-																				<div class="col-lg-3">
-																					<span class="dropdown-mega-sub-title">Elements 1</span>
-																					<ul class="dropdown-mega-sub-nav">
-																						<li><a class="dropdown-item" href="elements-accordions.html">Accordions</a></li>
-																						<li><a class="dropdown-item" href="elements-alerts.html">Alerts</a></li>
-																						<li><a class="dropdown-item" href="elements-animations.html">Animations</a></li>
-																						<li><a class="dropdown-item" href="elements-arrows.html">Arrows</a></li>
-																						<li><a class="dropdown-item" href="elements-badges.html">Badges</a></li>
-																						<li><a class="dropdown-item" href="elements-before-after.html">Before / After</a></li>
-																						<li><a class="dropdown-item" href="elements-blockquotes.html">Blockquotes</a></li>
-																						<li><a class="dropdown-item" href="elements-buttons.html">Buttons</a></li>
-																						<li><a class="dropdown-item" href="elements-call-to-action.html">Call to Action</a></li>
-																						<li><a class="dropdown-item" href="elements-cards.html">Cards</a></li>
-																						<li><a class="dropdown-item" href="elements-carousels.html">Carousels</a></li>
-																						<li><a class="dropdown-item" href="elements-cascading-images.html">Cascading Images</a></li>
-																					</ul>
-																				</div>
-																				<div class="col-lg-3">
-																					<span class="dropdown-mega-sub-title">Elements 2</span>
-																					<ul class="dropdown-mega-sub-nav">
-																						<li><a class="dropdown-item" href="elements-content-rotate.html">Content Rotate</a></li>
-																						<li><a class="dropdown-item" href="elements-countdowns.html">Countdowns</a></li>
-																						<li><a class="dropdown-item" href="elements-counters.html">Counters</a></li>
-																						<li><a class="dropdown-item" href="elements-dividers.html">Dividers</a></li>
-																						<li><a class="dropdown-item" href="elements-forms.html">Forms</a></li>
-																						<li><a class="dropdown-item" href="elements-headings.html">Headings</a></li>
-																						<li><a class="dropdown-item" href="elements-icons.html">Icons</a></li>
-																						<li><a class="dropdown-item" href="elements-icon-boxes.html">Icon Boxes</a></li>
-																						<li><a class="dropdown-item" href="elements-image-frames.html">Image Frames</a></li>
-																						<li><a class="dropdown-item" href="elements-image-gallery.html">Image Gallery</a></li>
-																						<li><a class="dropdown-item" href="elements-image-hotspots.html">Image Hotspots</a></li>
-																						<li><a class="dropdown-item" href="elements-lightboxes.html">Lightboxes</a></li>
-																					</ul>
-																				</div>
-																				<div class="col-lg-3">
-																					<span class="dropdown-mega-sub-title">Elements 3</span>
-																					<ul class="dropdown-mega-sub-nav">
-																						<li><a class="dropdown-item" href="elements-lists.html">Lists</a></li>						
-																						<li><a class="dropdown-item" href="elements-maps.html">Maps</a></li>
-																						<li><a class="dropdown-item" href="elements-medias.html">Medias</a></li>
-																						<li><a class="dropdown-item" href="elements-modals.html">Modals</a></li>
-																						<li><a class="dropdown-item" href="elements-parallax.html">Parallax</a></li>
-																						<li><a class="dropdown-item" href="elements-particles.html">Particles</a></li>
-																						<li><a class="dropdown-item" href="elements-posts.html">Posts</a></li>
-																						<li><a class="dropdown-item" href="elements-pricing-tables.html">Pricing Tables</a></li>
-																						<li><a class="dropdown-item" href="elements-process.html">Process</a></li>
-																						<li><a class="dropdown-item" href="elements-progressbars.html">Progress Bars</a></li>
-																						<li><a class="dropdown-item" href="elements-random-images.html">Random Images</a></li>
-																						<li><a class="dropdown-item" href="elements-read-more.html">Read More</a></li>
-																					</ul>
-																				</div>
-																				<div class="col-lg-3">
-																					<span class="dropdown-mega-sub-title">Elements 4</span>
-																					<ul class="dropdown-mega-sub-nav">
-																						<li><a class="dropdown-item" href="elements-sections.html">Sections</a></li>
-																						<li><a class="dropdown-item" href="elements-shape-dividers.html">Shape Dividers</a></li>
-																						<li><a class="dropdown-item" href="elements-star-ratings.html">Star Ratings</a></li>
-																						<li><a class="dropdown-item" href="elements-sticky-elements.html">Sticky Elements</a></li>
-																						<li><a class="dropdown-item" href="elements-tables.html">Tables</a></li>
-																						<li><a class="dropdown-item" href="elements-tabs.html">Tabs</a></li>
-																						<li><a class="dropdown-item" href="elements-testimonials.html">Testimonials</a></li>
-																						<li><a class="dropdown-item" href="elements-toggles.html">Toggles</a></li>
-																						<li><a class="dropdown-item" href="elements-tooltips-popovers.html">Tooltips & Popovers</a></li>
-																						<li><a class="dropdown-item" href="elements-typography.html">Typography</a></li>
-																						<li><a class="dropdown-item" href="elements-word-rotator.html">Word Rotator</a></li>
-																						<li><a class="dropdown-item" href="elements-360-image-viewer.html">360º Image Viewer</a></li>
-																					</ul>
-																				</div>
-																			</div>
-																		</div>
-																	</li>
-																</ul>
-															</li>
 
 															<li>
 																<a class="nav-link" href="demo-transportation-logistic-services.html">
 																	Services
-																</a>
-															</li>
-															<li class="dropdown">
-																<a class="nav-link dropdown-toggle" href="#">
-																	Pages
-																</a>
-																<ul class="dropdown-menu border-light mt-n1">
-																	<li>
-																		<a href="page-team.html" class="dropdown-item">Team</a>
-																	</li>
-																	<li>
-																		<a href="page-careers.html" class="dropdown-item">Careers</a>
-																	</li>
-																	<li>
-																		<a href="page-faq.html" class="dropdown-item">FAQ's</a>
-																	</li>
-																</ul>
-															</li>
-															<li>
-																<a class="nav-link" href="demo-transportation-logistic-news.html">
-																	News
 																</a>
 															</li>
 															<li>
@@ -251,8 +146,8 @@
 										</div>
 										<div class="vr opacity-2 ms-auto d-none d-xl-inline-block"></div>
 										<div class="px-4 d-none d-xxl-inline-block ws-nowrap">
-											<a href="#" class="btn border-0 px-4 py-2 line-height-9 btn-tertiary me-2">Request Rate</a>
-											<a href="#" class="btn border-0 px-4 py-2 line-height-9 btn-primary">Track Order</a>
+											<a href="tel:3057219863" class="btn border-0 px-4 py-2 line-height-9 btn-tertiary me-2">Request Rate</a>
+											<a href="contact-us.html" class="btn border-0 px-4 py-2 line-height-9 btn-primary"> Contact Us</a>
 										</div>
 									</div>
 								</div>
@@ -657,8 +552,9 @@
 					<div class="container-fluid">
 						<div class="row justify-content-center">
 							<div class="col-lg-10">
-								<!-- Google Maps - Go to the bottom of the page to change settings and map location. -->
-								<div id="googlemaps" class="google-map m-0" style="min-height: 600px;"></div>
+								<!-- Google Maps - Go to the bottom of the page to change settings and map location.
+								<div id="googlemaps" class="google-map m-0" style="min-height: 600px;"></div>-->
+								<div class="mapouter"><div class="gmap_canvas"><iframe width="900" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Miami&t=&z=7&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:500px;width:900px;}</style><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:900px;}</style></div></div>
 							</div>
 						</div>
 					</div>
@@ -668,34 +564,14 @@
 							<div class="col">
 								<div class="owl-carousel owl-theme nav-dark nav-style-1 nav-arrows-thin nav-font-size-lg nav-outside mb-0" data-plugin-options="{'responsive': {'0': {'items': 1}, '479': {'items': 1}, '768': {'items': 2}, '979': {'items': 2}, '1199': {'items': 4}}, 'loop': false, 'nav': true, 'dots': false, 'margin': 40}">
 									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
+										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">Miami, FL, United States</p>
+										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">bellepestcontrol@gmail.com</a></p>
+										<p class="font-weight-medium text-3 line-height-5 mb-0">(305) 721 9863</p>
 									</div>
 									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
-									</div>
-									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
-									</div>
-									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
-									</div>
-									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
-									</div>
-									<div>
-										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">123 Porto Drive, Suite 10B, Vista, New York, 99123</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">mail@domain.com</a></p>
-										<p class="font-weight-medium text-3 line-height-5 mb-0">800 123 4567</p>
+										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">Naples, FL, United States</p>
+										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">bellepestcontrol@gmail.com</a></p>
+										<p class="font-weight-medium text-3 line-height-5 mb-0">(305) 721 9863</p>
 									</div>
 								</div>
 							</div>
@@ -711,20 +587,20 @@
 					<div class="row pt-5">
 						<div class="col-lg-4">
 							<a href="demo-transportation-logistic.html" class="text-decoration-none">
-								<img src="img/demos/transportation-logistic/logo-footer.png" class="img-fluid mb-4" width="88">
+								<img src="image003.png" class="img-fluid mb-4" width="88">
 							</a>
 							<p class="text-3-5 pe-lg-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque rutrum pellentesqu. </p>
 							<ul class="list list-unstyled">
 								<li class="d-flex align-items-center mb-4">
-									<a href="mailto:porto@transportation-logistic.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">porto@domain.com</a>
+									<a href="mailto:porto@transportation-logistic.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">bellepestcontrol@gmail.com</a>
 								</li>
 								<li class="d-flex align-items-center mb-4">
-									<a href="tel:8001234567" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">800-123-4567</a>
+									<a href="tel:3057219863" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">(305)-721-9863</a>
 								</li>
 							</ul>
 							<div class="d-none d-xxl-inline-block ws-nowrap">
-								<a href="#" class="btn border-0 px-4 py-2 line-height-9 btn-light text-color-dark me-2">Request Rate</a>
-								<a href="#" class="btn border-0 px-4 py-2 line-height-9 btn-primary">Track Order</a>
+								<a href="tel:3057219863" class="btn border-0 px-4 py-2 line-height-9 btn-light text-color-dark me-2">Request Rate</a>
+								<a href="contact-us.html" class="btn border-0 px-4 py-2 line-height-9 btn-primary"> Contact Us</a>
 							</div>
 						</div>
 						<div class="col-lg-8">
@@ -732,41 +608,12 @@
 								<div class="col-lg-6 mb-4 mb-lg-0">
 									<h4 class="text-color-light font-weight-semibold mb-3">Navigation</h4>
 									<ul class="list list-unstyled columns-lg-2">
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Home</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">About Us</a></li>
+										<li><a href="index.html" class="text-color-grey text-color-hover-primary">Home</a></li>
+										<li><a href="about-us.html" class="text-color-grey text-color-hover-primary">About Us</a></li>
 										<li><a href="services.html" class="text-color-grey text-color-hover-primary">Services</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">News</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Pages</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Contact Us</a></li>
+			
+										<li><a href="contact-us.html" class="text-color-grey text-color-hover-primary">Contact Us</a></li>
 									</ul>
-								</div>
-								<div class="col-lg-6">
-									<h4 class="text-color-light font-weight-semibold mb-3">Useful Links</h4>
-									<ul class="list list-unstyled columns-lg-2">
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Registered Shippers</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Local Pickup</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Local Delivery</a></li>
-										<li><a href="#" class="text-color-grey text-color-hover-primary">Freight Consolidation</a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col p-relative bottom-3">
-									<div class="alert alert-success d-none" id="newsletterSuccess">
-										<strong>Success!</strong> You've been added to our email list.
-									</div>
-									<div class="alert alert-danger d-none" id="newsletterError"></div>
-									<div class="d-flex flex-column flex-lg-row align-items-start align-items-lg-center">
-										<h4 class="text-color-light ws-nowrap me-3 mb-3 mb-lg-0">Subscribe to Newsletter:</h4>
-										<form id="newsletterForm" class="form-style-3 w-100" action="php/newsletter-subscribe.php" method="POST">
-											<div class="d-flex">
-												<input class="form-control box-shadow-none" placeholder="Email Address" name="newsletterEmail" id="newsletterEmail" type="text" />
-												<button class="btn btn-primary custom-form-control-newsletter-btn btn-px-3 btn-py-2 font-weight-bold" type="submit">
-													GO
-												</button>
-											</div>
-										</form>
-									</div>
 								</div>
 							</div>
 						</div>
@@ -777,7 +624,7 @@
 						<hr class="bg-color-light opacity-1">
 						<div class="row">
 							<div class="col mt-4 mb-4 pb-4">
-								<p class="text-center text-3 mb-0 text-color-grey">Porto Transportation & Logistic © 2022. All Rights Reserved.</p>
+								<p class="text-center text-3 mb-0 text-color-grey">Belle Pest Control, LLC © 2022. All Rights Reserved.</p>
 							</div>
 						</div>
 					</div>
