--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 														<img width="70" height="43" src="img/demos/transportation-logistic/icons/service-1.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
-														<h4 class="mb-2 text-5 font-weight-semi-bold">Ground Shipping</h4>
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Rats</h4>
 														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
 														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
@@ -236,7 +236,7 @@
 														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
-														<h4 class="mb-2 text-5 font-weight-semi-bold">Air Freight</h4>
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Ants</h4>
 														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
 														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
@@ -252,7 +252,7 @@
 														<img width="58" height="49" src="img/demos/transportation-logistic/icons/service-3.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
-														<h4 class="mb-2 text-5 font-weight-semi-bold">Warehousing</h4>
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Roaches</h4>
 														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
 														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
@@ -268,7 +268,7 @@
 														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
-														<h4 class="mb-2 text-5 font-weight-semi-bold">Air Freight</h4>
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Tented and tentless termite treatments</h4>
 														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
 														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
@@ -284,7 +284,55 @@
 														<img width="70" height="43" src="img/demos/transportation-logistic/icons/service-1.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
-														<h4 class="mb-2 text-5 font-weight-semi-bold">Ground Shipping</h4>
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Insect management</h4>
+														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
+														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="anim-hover-translate-top-10px transition-3ms">
+										<div class="card">
+											<div class="card-body p-5">
+												<div class="d-flex flex-row">
+													<div class="pt-2">
+														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+													</div>
+													<div class="ps-4">
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Snakes</h4>
+														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
+														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="anim-hover-translate-top-10px transition-3ms">
+										<div class="card">
+											<div class="card-body p-5">
+												<div class="d-flex flex-row">
+													<div class="pt-2">
+														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+													</div>
+													<div class="ps-4">
+														<h4 class="mb-2 text-5 font-weight-semi-bold"> Bees and wasps</h4>
+														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
+														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="anim-hover-translate-top-10px transition-3ms">
+										<div class="card">
+											<div class="card-body p-5">
+												<div class="d-flex flex-row">
+													<div class="pt-2">
+														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
+													</div>
+													<div class="ps-4">
+														<h4 class="mb-2 text-5 font-weight-semi-bold"> Raccoons</h4>
 														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
 														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
@@ -302,7 +350,7 @@
 					<div class="container py-5 mt-5">
 						<div class="row mt-4">
 							<div class="col-lg-5">
-								<p class="custom-drop-caps font-weight-medium text-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">35</span></span> years in business and cras a elit sit amet leo accumsan vo lutpat su spendisse hendrerit amet leo.</p>
+								<p class="custom-drop-caps font-weight-medium text-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">15</span></span> years in business and cras a elit sit amet leo accumsan vo lutpat su spendisse hendrerit amet leo.</p>
 								<p class="m-0"><a href="#" class="text-uppercase text-3-5 text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-3ms d-inline-block">View More About Us</a></p>
 							</div>
 							<div class="d-none d-lg-block col-lg-1 text-center">
