--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 					<div class="container py-5 mt-5">
 						<div class="row mt-4">
 							<div class="col-lg-5">
-								<p class="custom-drop-caps font-weight-medium text-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">15</span></span> years in business and cras a elit sit amet leo accumsan vo lutpat su spendisse hendrerit amet leo.</p>
+								<p class="custom-drop-caps font-weight-medium text-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">15</span></span> years in business We now know that pests are active throughout the year and that your property requires protection. Your house can be your largest investment, thus our exterminators are dedicated to providing cutting-edge pest treatments to assist you safeguard it.</p>
 								<p class="m-0"><a href="#" class="text-uppercase text-3-5 text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-3ms d-inline-block">View More About Us</a></p>
 							</div>
 							<div class="d-none d-lg-block col-lg-1 text-center">
