added more test

--- a/index.html
+++ b/index.html
@@ -350,14 +350,14 @@
 					<div class="container py-5 mt-5">
 						<div class="row mt-4">
 							<div class="col-lg-5">
-								<p class="custom-drop-caps font-weight-medium text-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">15</span></span> years in business We now know that pests are active throughout the year and that your property requires protection. Your house can be your largest investment, thus our exterminators are dedicated to providing cutting-edge pest treatments to assist you safeguard it.</p>
+								<p class="custom-drop-caps font-weight-medium text-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">15</span></span> years in business we bring innovative solutions, and a passion for providing quality service.</p>
 								<p class="m-0"><a href="#" class="text-uppercase text-3-5 text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-3ms d-inline-block">View More About Us</a></p>
 							</div>
 							<div class="d-none d-lg-block col-lg-1 text-center">
 								<div class="vr bg-primary opacity-10 custom-vr-1"></div>
 							</div>
 							<div class="pb-5 pb-lg-0 my-5 my-lg-0 col-lg-6">
-								<p class="font-weight-medium text-8 line-height-4 text-color-tertiary negative-ls-1 p-relative bottom-10"><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0">We are <strong>committed</strong> to providing our</span> <span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="200">clients the best logistic and</span><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="400"> transportation services.</span></p>
+								<p class="font-weight-medium text-8 line-height-4 text-color-tertiary negative-ls-1 p-relative bottom-10"><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0">We are <strong>committed</strong> to providing our</span> <span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="200">clients the best Pest Control and</span><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="400"> Termite services.</span></p>
 							</div>
 						</div>
 					</div>
@@ -376,11 +376,11 @@
 												<span class="thumb-info-title bottom-30 bg-transparent w-100 mw-100 p-0 text-center">
 													<span class="thumb-info-swap-content-wrapper">
 														<span class="thumb-info-inner text-3-5 pb-2">
-															Registered Shippers
+															Commercial Services
 														</span>
 														<span class="thumb-info-inner text-2">
-															<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-															<a href="#" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">View Details</a>
+															<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Infestations can cause damage to your building, electrical equipment, and your business as a whole.</p>
+															<a href="#" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">Ask for a quote!</a>
 														</span>
 													</span>
 												</span>
@@ -394,47 +394,11 @@
 												<span class="thumb-info-title bottom-30 bg-transparent w-100 mw-100 p-0 text-center">
 													<span class="thumb-info-swap-content-wrapper">
 														<span class="thumb-info-inner text-3-5 pb-2">
-															Local Pickup and Delivery
+															Residential Services
 														</span>
 														<span class="thumb-info-inner text-2">
-															<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-															<a href="#" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">View Details</a>
-														</span>
-													</span>
-												</span>
-											</span>
-										</span>
-									</div>
-									<div>
-										<span class="thumb-info thumb-info-swap-content anim-hover-inner-wrapper">
-											<span class="thumb-info-wrapper overlay overlay-show overlay-gradient-bottom-content">
-												<img src="img/demos/transportation-logistic/services/service-3.jpg" class="img-fluid" alt="">
-												<span class="thumb-info-title bottom-30 bg-transparent w-100 mw-100 p-0 text-center">
-													<span class="thumb-info-swap-content-wrapper">
-														<span class="thumb-info-inner text-3-5 pb-2">
-															Freight Consolidation
-														</span>
-														<span class="thumb-info-inner text-2">
-															<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-															<a href="#" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">View Details</a>
-														</span>
-													</span>
-												</span>
-											</span>
-										</span>
-									</div>
-									<div>
-										<span class="thumb-info thumb-info-swap-content anim-hover-inner-wrapper">
-											<span class="thumb-info-wrapper overlay overlay-show overlay-gradient-bottom-content">
-												<img src="img/demos/transportation-logistic/services/service-2.jpg" class="img-fluid" alt="">
-												<span class="thumb-info-title bottom-30 bg-transparent w-100 mw-100 p-0 text-center">
-													<span class="thumb-info-swap-content-wrapper">
-														<span class="thumb-info-inner text-3-5 pb-2">
-															Local Pickup and Delivery
-														</span>
-														<span class="thumb-info-inner text-2">
-															<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-															<a href="#" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">View Details</a>
+															<p class="px-5 text-2 opacity-7 font-weight-medium text-light ls-0">In addition to posing health dangers to humans, animals, and children, pests can also harm your property.</p>
+															<a href="#" class="btn border-0 px-3 py-1 line-height-8 btn-primary ls-0">We can help!</a>
 														</span>
 													</span>
 												</span>
@@ -509,13 +473,13 @@
 							<div class="col-lg-9 mb-3 mb-lg-0">
 								<p class="text-color-light text-4-5 font-weight-medium line-height-4 mb-0">
 									<span class="d-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0">
-										<strong>Request Rate Online</strong> - Need Immediate Confirmation? Call Us at <u>888-123-4567</u>
+										<strong>Request Rate Online</strong> - Need Immediate Confirmation? Call Us at <u>(305) 721 9863										</u>
 									</span>
 								</p>
 							</div>
 							<div class="col-lg-3 pt-3 pt-lg-0 text-center text-lg-end">
 								<span class="d-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="300">
-									<a href="#" class="btn btn-light text-color-tertiary border-0 text-3-5 font-weight-semi-bold btn-px-5 btn-py-3">Request Rate</a>
+									<a href="contact-us.html" class="btn btn-light text-color-tertiary border-0 text-3-5 font-weight-semi-bold btn-px-5 btn-py-3">Request Rate</a>
 								</span>
 							</div>
 						</div>
@@ -530,7 +494,7 @@
 									<div class="col-half-section col-half-section-right py-5 ms-auto">
 										<div class="px-3 py-5">
 
-											<p class="font-weight-medium text-8 line-height-4 text-color-tertiary negative-ls-1"><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0">Our <strong>process</strong> is one of the things</span><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="200"> that makes us very competitive</span><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="400"> in the logistic market.</span></p>
+											<p class="font-weight-medium text-8 line-height-4 text-color-tertiary negative-ls-1"><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="0">Our <strong>process</strong> is one of the things</span><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="200"> that makes us very competitive</span><span class="d-lg-inline-block appear-animation" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="400"> in the pest control market.</span></p>
 
 											<div class="process process-vertical py-4">
 												<div class="process-step appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
@@ -538,8 +502,8 @@
 														<strong class="process-step-circle-content text-light">1</strong>
 													</div>
 													<div class="process-step-content">
-														<h4 class="mb-0 mt-1 text-4-5 font-weight-bold">Receiving</h4>
-														<p class="mb-0 font-weight-medium text-3-5">Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
+														<h4 class="mb-0 mt-1 text-4-5 font-weight-bold">INSPECTION, PREVENTIVE ACTION, IDENTIFICATION </h4>
+														<p class="mb-0 font-weight-medium text-3-5">Our regular inspections concentrate on the locations where pests are most likely to develop, such as receiving docks, storage spaces, staff break rooms, the locations of recent ingredient spills, etc., and we look for any potential entrance points, food and water supplies that can increase insect infestations.Various pests exhibit varying behavior. We make sure pests can be eradicated more effectively and with less danger of harming other organisms by determining the troublesome species.</p>
 													</div>
 												</div>
 												<div class="process-step appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
@@ -547,7 +511,7 @@
 														<strong class="process-step-circle-content text-light">2</strong>
 													</div>
 													<div class="process-step-content">
-														<h4 class="mb-0 mt-1 text-4-5 font-weight-bold">Shipping</h4>
+														<h4 class="mb-0 mt-1 text-4-5 font-weight-bold">ANALYSIS, TREATMENT SELECTION</h4>
 														<p class="mb-0 font-weight-medium text-3-5">Ipsum dolor sit amet, consectetur adipiscing elit.</p>
 													</div>
 												</div>
@@ -556,7 +520,7 @@
 														<strong class="process-step-circle-content text-light">3</strong>
 													</div>
 													<div class="process-step-content">
-														<h4 class="mb-0 mt-1 text-4-5 font-weight-bold">Delivery</h4>
+														<h4 class="mb-0 mt-1 text-4-5 font-weight-bold">MONITORING, DOCUMENTATION</h4>
 														<p class="mb-0 font-weight-medium text-3-5">Dolor sit amet, consectetur adipiscing elit.</p>
 													</div>
 												</div>
