--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 													</div>
 													<div class="process-step-content">
 														<h4 class="mb-0 mt-1 text-4-5 font-weight-bold">ANALYSIS, TREATMENT SELECTION</h4>
-														<p class="mb-0 font-weight-medium text-3-5">Ipsum dolor sit amet, consectetur adipiscing elit.</p>
+														<p class="mb-0 font-weight-medium text-3-5">Once the pest has been correctly identified, we determine why they reside in your facility. We analyze the local area for debris, moisture accumulation, odors, infestations etc,.The responses to these questions will lead us to the best choice of control techniques.The "correct treatment" will frequently include a mix of actions, including chemical treatments, baiting, and trapping. But by focusing on non-chemical methods first, we can ensure that our pest control program is efficiently reducing pests at the least risk to your food safety program, non-target species and the environment.</p>
 													</div>
 												</div>
 												<div class="process-step appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
@@ -539,7 +539,7 @@
 													</div>
 													<div class="process-step-content">
 														<h4 class="mb-0 mt-1 text-4-5 font-weight-bold">MONITORING, DOCUMENTATION</h4>
-														<p class="mb-0 font-weight-medium text-3-5">Dolor sit amet, consectetur adipiscing elit.</p>
+														<p class="mb-0 font-weight-medium text-3-5">We are constantly monitoring your facility for pest activity and facility and operational changes which can protect against infestation and help eliminate existing ones. Our pest management professional will most likely visit your facility on a bi-weekly, weekly or monthly basis. Not only so, but we keep up-to-date pest control documentation of our visits to facilitate future pest control services and meet business standards.</p>
 													</div>
 												</div>
 											</div>
