--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 						<div class="row mt-4">
 							<div class="col-lg-5">
 								<p class="custom-drop-caps font-weight-medium text-4"><span class="custom-drop-caps-number text-color-dark negative-ls-1"><span class="d-inline-block appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="0">15</span></span> years in business and we continue to bring innovative solutions, and a passion for providing quality service.</p>
-								<p class="m-0"><a href="#" class="text-uppercase text-3-5 text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-3ms d-inline-block">View More About Us</a></p>
+								<p class="m-0"><a href="about-us.html" class="text-uppercase text-3-5 text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-3ms d-inline-block">View More About Us</a></p>
 							</div>
 							<div class="d-none d-lg-block col-lg-1 text-center">
 								<div class="vr bg-primary opacity-10 custom-vr-1"></div>
@@ -454,7 +454,7 @@
 												<p class="mb-0 line-height-8 font-weight-medium text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes</p>
 											</blockquote>
 											<div class="testimonial-author border-0">
-												<p><strong class="font-weight-extra-bold pt-2">John Smith</strong><span>CEO &amp; Founder - Okler</span></p>
+												<p><strong class="font-weight-extra-bold pt-2">Carolina Cabrera </strong><span>Attorney &amp; Founder - The Law Offices of Carolina Cabrera</span></p>
 											</div>
 										</div>
 									</div>
@@ -464,7 +464,7 @@
 												<p class="mb-0 line-height-8 font-weight-medium text-4">Consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes</p>
 											</blockquote>
 											<div class="testimonial-author border-0">
-												<p><strong class="font-weight-extra-bold pt-2">Jessica Smith</strong><span>CEO &amp; Founder - Okler</span></p>
+												<p><strong class="font-weight-extra-bold pt-2">Jose L. Lago</strong><span>CEO &amp; Attorney &amp; Founder - The Law Offices of Jose L. Lago</span></p>
 											</div>
 										</div>
 									</div>
@@ -474,7 +474,7 @@
 												<p class="mb-0 line-height-8 font-weight-medium text-4">Adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes</p>
 											</blockquote>
 											<div class="testimonial-author border-0">
-												<p><strong class="font-weight-extra-bold pt-2">Bob Smith</strong><span>CEO &amp; Founder - Okler</span></p>
+												<p><strong class="font-weight-extra-bold pt-2">Adrian Alpizar</strong><span>Owner &amp; Manager - Beverly Hills Apartments</span></p>
 											</div>
 										</div>
 									</div>
@@ -575,7 +575,7 @@
 								</div>
 							</div>
 							<div class="col-md-4 text-md-end">
-								<a href="#" class="btn btn-tertiary border-0 text-3-5 font-weight-semi-bold btn-px-5 btn-py-3 d-none d-md-inline-block">Request Rate</a>
+								<a href="contact-us.html" class="btn btn-tertiary border-0 text-3-5 font-weight-semi-bold btn-px-5 btn-py-3 d-none d-md-inline-block">Request Rate</a>
 							</div>
 						</div>
 					</div>
@@ -596,12 +596,12 @@
 								<div class="owl-carousel owl-theme nav-dark nav-style-1 nav-arrows-thin nav-font-size-lg nav-outside mb-0" data-plugin-options="{'responsive': {'0': {'items': 1}, '479': {'items': 1}, '768': {'items': 2}, '979': {'items': 2}, '1199': {'items': 4}}, 'loop': false, 'nav': true, 'dots': false, 'margin': 40}">
 									<div>
 										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">Miami, FL, United States</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">bellepestcontrol@gmail.com</a></p>
+										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:bellepestcontrol@gmail.com">bellepestcontrol@gmail.com</a></p>
 										<p class="font-weight-medium text-3 line-height-5 mb-0">(305) 721 9863</p>
 									</div>
 									<div>
 										<p class="font-weight-semibold text-color-tertiary text-4 line-height-6 mb-2">Naples, FL, United States</p>
-										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:mail@domain.com">bellepestcontrol@gmail.com</a></p>
+										<p class="font-weight-medium text-3 line-height-5 mb-2"><a href="mailto:bellepestcontrol@gmail.com">bellepestcontrol@gmail.com</a></p>
 										<p class="font-weight-medium text-3 line-height-5 mb-0">(305) 721 9863</p>
 									</div>
 								</div>
@@ -620,7 +620,7 @@
 							<a href="demo-transportation-logistic.html" class="text-decoration-none">
 								<img src="image003.png" class="img-fluid mb-4" width="88">
 							</a>
-							<p class="text-3-5 pe-lg-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit quisque rutrum pellentesqu. </p>
+							<p class="text-3-5 pe-lg-2">Since its founding in 2008, Belle Pest Control has provided individualized pest management plans and cutting-edge technologies to safeguard homes and businesses throughout the state of Florida.</p>
 							<ul class="list list-unstyled">
 								<li class="d-flex align-items-center mb-4">
 									<a href="mailto:porto@transportation-logistic.com" class="d-inline-flex align-items-center text-decoration-none text-color-light text-color-hover-primary font-weight-semibold text-4-5">bellepestcontrol@gmail.com</a>
@@ -642,7 +642,6 @@
 										<li><a href="index.html" class="text-color-grey text-color-hover-primary">Home</a></li>
 										<li><a href="about-us.html" class="text-color-grey text-color-hover-primary">About Us</a></li>
 										<li><a href="services.html" class="text-color-grey text-color-hover-primary">Services</a></li>
-			
 										<li><a href="contact-us.html" class="text-color-grey text-color-hover-primary">Contact Us</a></li>
 									</ul>
 								</div>
@@ -682,86 +681,6 @@
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
 
-	<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
-		<script>
-
-			/*
-			Map Settings
-
-				Find the Latitude and Longitude of your address:
-					- https://www.latlong.net/
-					- http://www.findlatitudeandlongitude.com/find-address-from-latitude-and-longitude/
-
-			*/
-
-			// Map Markers
-			var mapMarkers = [{
-				address: "New York, NY 10017",
-				html: "<strong>Porto</strong><br>New York, NY 10017",
-				icon: {
-					image: "img/demos/transportation-logistic/map-pin.png",
-					iconsize: [31, 40],
-					iconanchor: [14, 40]
-				},
-				popup: false
-			},{
-				address: "Chicago, IL",
-				html: "<strong>Porto</strong><br>Chicago, IL",
-				icon: {
-					image: "img/demos/transportation-logistic/map-pin.png",
-					iconsize: [31, 40],
-					iconanchor: [14, 40]
-				},
-				popup: false
-			},{
-				address: "Louisville",
-				html: "<strong>Porto</strong><br>Louisville",
-				icon: {
-					image: "img/demos/transportation-logistic/map-pin.png",
-					iconsize: [31, 40],
-					iconanchor: [14, 40]
-				},
-				popup: false
-			}];
-
-			// Map Initial Location
-			var initLatitude = 40.75198;
-			var initLongitude = -73.96978;
-
-			// Map Extended Settings
-			var mapSettings = {
-				controls: {
-					draggable: (($.browser.mobile) ? false : true),
-					panControl: true,
-					zoomControl: true,
-					mapTypeControl: true,
-					scaleControl: true,
-					streetViewControl: true,
-					overviewMapControl: true
-				},
-				scrollwheel: false,
-				markers: mapMarkers,
-				latitude: initLatitude,
-				longitude: initLongitude,
-				zoom: 5
-			};
-
-			var map = $('#googlemaps').gMap(mapSettings),
-				mapRef = $('#googlemaps').data('gMap.reference');
-
-			var mapRef = $('#googlemaps').data('gMap.reference');
-
-			// Styles from https://snazzymaps.com/
-			var styles = [{"featureType":"water","elementType":"geometry","stylers":[{"color":"#e9e9e9"},{"lightness":17}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#F4F9FD"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ffffff"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#ffffff"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#ffffff"},{"lightness":16}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#F4F9FD"},{"lightness":21}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#dedede"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#ffffff"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#333333"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#f2f2f2"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#fefefe"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#fefefe"},{"lightness":17},{"weight":1.2}]}];
-
-			var styledMap = new google.maps.StyledMapType(styles, {
-				name: 'Styled Map'
-			});
-
-			mapRef.mapTypes.set('map_style', styledMap);
-			mapRef.setMapTypeId('map_style');
-
-		</script>
 
 	</body>
 </html>
