--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 													</div>
 													<div class="process-step-content">
 														<h4 class="mb-0 mt-1 text-4-5 font-weight-bold">MONITORING, DOCUMENTATION</h4>
-														<p class="mb-0 font-weight-medium text-3-5">We are constantly monitoring your facility for pest activity and facility and operational changes which can protect against infestation and help eliminate existing ones. Our pest management professional will most likely visit your facility on a bi-weekly, weekly or monthly basis. Not only so, but we keep up-to-date pest control documentation of our visits to facilitate future pest control services and meet business standards.</p>
+														<p class="mb-0 font-weight-medium text-3-5">We are constantly monitoring your facility for pest activity and operational changes which can protect against infestation and help eliminate existing ones. Our pest management professional will most likely visit your facility on a bi-weekly, weekly or monthly basis. Not only so, but we keep up-to-date pest control documentation of our visits to facilitate future pest control services and meet business standards.</p>
 													</div>
 												</div>
 											</div>
