--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
 														<img width="70" height="43" src="img/demos/transportation-logistic/icons/service-1.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
-														<h4 class="mb-2 text-5 font-weight-semi-bold">Rats</h4>
-														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Rodents</h4>
+														<p class="mb-2 font-weight-medium text-3">Our rodent control specialists will develop a plan tailored to your needs to keep out rodents long-term.</p>
+														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
 												</div>
 											</div>
@@ -237,8 +237,8 @@
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Ants</h4>
-														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+														<p class="mb-2 font-weight-medium text-3">Because of their adaptability, ants can make a living in a wide variety of ecosystems, we can help.</p>
+														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
 												</div>
 											</div>
@@ -253,8 +253,8 @@
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Roaches</h4>
-														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+														<p class="mb-2 font-weight-medium text-3">We follow methods, that when combined, disrupt the roach life cycle, eliminate the current population, and greatly reduce the roach population.</p>
+														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
 												</div>
 											</div>
@@ -269,8 +269,8 @@
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Tented and tentless termite treatments</h4>
-														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+														<p class="mb-2 font-weight-medium text-3">Our termite experts will work with you to keep your property safe from these insects all year long.</p>
+														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
 												</div>
 											</div>
@@ -285,8 +285,8 @@
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold">Insect management</h4>
-														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+														<p class="mb-2 font-weight-medium text-3">We help eliminate Spiders, Palm Pest Insects and Mites, Snails and Slugs, Terrestrial Slugs of Florida and more.</p>
+														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
 												</div>
 											</div>
@@ -300,9 +300,9 @@
 														<img width="70" height="26" src="img/demos/transportation-logistic/icons/service-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-fill-color-primary'}" />
 													</div>
 													<div class="ps-4">
-														<h4 class="mb-2 text-5 font-weight-semi-bold">Snakes</h4>
-														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+														<h4 class="mb-2 text-5 font-weight-semi-bold">Reptiles and Snakes</h4>
+														<p class="mb-2 font-weight-medium text-3">An expert exterminator will be your full-service pest solutions provider specializing in the effective removal and prevention of reptiles and snakes.</p>
+														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
 												</div>
 											</div>
@@ -317,8 +317,8 @@
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold"> Bees and wasps</h4>
-														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+														<p class="mb-2 font-weight-medium text-3">We see a variety of stinging insects, from bumblebees and yellow jackets to carpenter bees and mud daubers.</p>
+														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
 												</div>
 											</div>
@@ -333,8 +333,8 @@
 													</div>
 													<div class="ps-4">
 														<h4 class="mb-2 text-5 font-weight-semi-bold"> Raccoons</h4>
-														<p class="mb-2 font-weight-medium text-3">Lorem ipsum dolor sit amet, conse ctetur adipi scing elit.</p>
-														<a href="#" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
+														<p class="mb-2 font-weight-medium text-3">We have various control methods which we can employ depending on your circumstances. Traps, one-way doors, access points and more.</p>
+														<a href="services.html" class="text-uppercase text-2-5 stretched-link text-decoration-underline text-color-primary text-color-hover-tertiary font-weight-semi-bold transition-2ms d-inline-block">View More</a>
 													</div>
 												</div>
 											</div>
